<resources>
    <string name="app_name">My Applicationwer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btt_first_fragment">Primer fragment</string>
    <string name="btt_second_fragment">Segundo fragment</string>
    <string name="btt_third_fragment">Tercer fragment</string>



    <!-- Calculadora-->
    <string name="number_1" >Numero1</string>
    <string name="number_2" >Numero2</string>
    <string name="calculate_1" >Calcular</string>
    <string name="respuesta" >Respuesta</string>

    <string name="sum" >Suma</string>
    <string name="substract" >Restar</string>
    <string name="divide" >Dividir</string>
    <string name="multiply" >Multiplicar</string>

</resources>