<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/btt_second_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resultado"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_number_2"
        android:layout_width="124dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/number_2"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toEndOf="@+id/txt_number_1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_number_1"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/number_1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btm_Calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_1"
        app:layout_constraintBottom_toTopOf="@+id/txt_resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.319" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="165dp"
        android:layout_height="189dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sum" />

        <RadioButton
            android:id="@+id/radioSubstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/substract" />

        <RadioButton
            android:id="@+id/radioDivide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divide" />

        <RadioButton
            android:id="@+id/radioMultiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/multiply" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxMult"
        android:layout_width="119dp"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="232dp"
        android:text="@string/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_sum"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="32dp"
        android:text="@string/sum"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxRest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoDiv"
        android:layout_width="119dp"
        android:layout_height="42dp"
        android:layout_marginStart="26dp"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxMult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBoxRest"
        android:layout_width="118dp"
        android:layout_height="46dp"
        android:layout_marginStart="26dp"
        android:text="@string/substract"
        app:layout_constraintBottom_toTopOf="@+id/checkBoDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="293dp"
        android:layout_height="62dp"
        android:layout_marginTop="356dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>