<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="221dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/previous"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonThird"
        app:layout_constraintEnd_toStartOf="@+id/buttonThird"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="57dp"
        android:text="@string/btt_third_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_second" />

    <EditText
        android:id="@+id/txt_number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/number_1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_number2"
        app:layout_constraintEnd_toStartOf="@+id/btt_calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/number_2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/txt_number1"
        app:layout_constraintTop_toBottomOf="@+id/txt_number1" />

    <EditText
        android:id="@+id/txt_resp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="245dp"
        android:ems="10"
        android:hint="@string/respuesta"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="354dp"
        android:layout_height="0dp"
        android:layout_marginBottom="462dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textview_second"
        app:layout_constraintStart_toStartOf="@+id/textview_second"
        app:layout_constraintTop_toBottomOf="@+id/btt_calculate" />

    <ImageButton
        android:id="@+id/btt_calculate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="52dp"
        android:scaleType="fitXY"
        android:src="@mipmap/calc"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_number1"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>